test/parser/Queries/syntax_errors/fail_K-ForExprWithout-32.xq
(:** ne **** $ ************************ where ***** let *********** eq ******:)
(:  K-ForExprWithout-32            ne   ne                  :)
(: Written  where by: Frans Englich           let  foo   foo              :)
(: Date: 2006-10-05T18:29:37+02:00 eq    eq      $   foo          $      eq   ne  :)(:Purpose: Variable which is not in scope.    $      foo    :)
(:foo** for *****foo** $ * eq **** eq ****foo************* $ ***foo****** let ************:)
$NOTEXIST+ eq  1